[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyLayoutTools"
version = "1.0.0" 
requires-python = ">=3.7"
authors = [
  { name="Bash Elliott", email="rackodo.business@gmail.com" },
]
description = "Library for Python Layouts"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rackodo/PyLayoutTools"
"Bug Tracker" = "https://github.com/rackodo/PyLayoutTools/issues"